--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Xiang Zhang"
-description              : "A master student who loves exploring everything related to computer vision and neuromorphic computing :)"
+description              : "A master student who loves exploring everything related to machine intelligence :)"
 repository               : "XiangZ-0.github.io"
 google_scholar_stats_use_cdn : true
 
