--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,9 @@ google_analytics_id      :  # get google_analytics_id from https://analytics.goo
 
 # SEO Related
 google_site_verification :  "Y-8dWFqEBgf6Lb67qOcGxl591ab_oBE_nK596-AgH_k" # get google_site_verification from https://search.google.com/search-console/about
-bing_site_verification   :  # get bing_site_verification from https://www.bing.com/webmasters/about
-baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.baidu.com/login/index?u=/site/index
+bing_site_verification   :  "7D4030ACE06CE8CD8A82538C040AAFB2" # get bing_site_verification from https://www.bing.com/webmasters/about
+baidu_site_verification  :  "code-7mFZDHRatz" # get baidu_site_verification from https://ziyuan.baidu.com/login/index?u=/site/index
+
 
 # Site Author
 author:
