--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=AVnXU-cAAAAJ&hl=en"
-  email            : "xiang.zhang@vision.ee.ethz.ch"
+  email            : "xiangz.ethz@gmail.com"
   researchgate     : "https://www.researchgate.net/profile/Xiang-Zhang-179"
   uri              :
   bitbucket        :
